Rename Rom to Cartridge; Add debug function to step-by-step testing; Add test nes file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ target_sources(
 		src/main.cpp
 		src/CPU.cpp
 		src/Bus.cpp
-		src/Rom.cpp
+		src/Cartridge.cpp
 )
 
 target_include_directories(
