--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libs/spdlog"]
-	path = libs/spdlog
+[submodule "vendor/spdlog"]
+	path = vendor/spdlog
 	url = git@github.com:gabime/spdlog.git
