--- a/test/ines.cfg
+++ b/test/ines.cfg
@@ -2,24 +2,38 @@
 
 # Defines what types of memory exist in our environment.
 MEMORY {
-	ZP:   start = $00,   size = $100,  type = rw;
-	RAM:  start = $0200, size = $600,  type = rw;
-	HDR:  start = $0000, size = $10,   type = ro, file = %O, fill = yes, fillval = $00;
+	HDR:   file = %O, start = $0000, size = $10,  fill = yes, fillval = $00;
 
-	PRG0: start = $c000, size = $4000, type = ro, file = %O, fill = yes, fillval = $ff;
+	# RAM Layout:
+	ZP:    file = "", start = $0000, size = $100;
+	STACK: file = "", start = $0100, size = $100;
+	RAM:   file = "", start = $0300, size = $500;
+	OAM:   file = "", start = $0200, size = $100;
 
-	CHR0: start = $0000, size = $2000, type = ro, file = %O, fill = yes, fillval = $cc;
+	# 16K PRG banks:
+	PRG0:  file = %O, start = $c000, size = $3ffa, fill = yes, fillval = $00;
+	# Interrupt Vectors:
+	VECS:  file = %O, start = $fffa, size = $0006, fill = yes, fillval = $00;
+
+	# 8K CHR banks:
+	CHR0:  file = %O, start = $0000, size = $2000, fill = yes, fillval = $cc;
 }
 
 # Linker configuration.
-# Order of the segments matters here.
 SEGMENTS {
-	ZEROPAGE: load = ZP,   type = zp;
-	BSS:      load = RAM,  type = bss, align = $100, define = yes;
+	# Header:
+	HEADER:   load = HDR,   type = ro;
+	ZEROPAGE: load = ZP,    type = zp;
 
-	HEADER:   load = HDR,  type = ro,  align = $10;
+	# ROM:
+	RODATA:   load = PRG0,  type = ro;
+	CODE:     load = PRG0,  type = ro;
+	VECTORS:  load = VECS,  type = ro;
 
-	CODE:     load = PRG0, type = ro,  start = $c000;
-	VECTORS:  load = PRG0, type = ro,  start = $fffa;
-	TILES:    load = CHR0, type = ro,  define = no;
+	CHR:      load = CHR0,  type = ro;
+
+	# RAM
+	STACK:    load = STACK, type = bss, define = yes;
+	OAM:      load = OAM,   type = bss, define = yes;
+	BSS:      load = RAM,   type = bss, define = yes;
 }
