--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,54 +1,88 @@
-cmake_minimum_required(VERSION 3.21)
-project(nes CXX)
+cmake_minimum_required(VERSION 3.23)
+project(
+	nes
+	VERSION 0.1.0
+	LANGUAGES C
+)
+
+option(ENABLE_ASAN "Enable Address Sanitizer" ON)
 
 include(cmake/base.cmake)
 include(cmake/warnings.cmake)
-include(cmake/debug.cmake)
-include(cmake/libraries.cmake)
 
 add_executable(${PROJECT_NAME})
 
 target_compile_features(
 	${PROJECT_NAME}
 	PRIVATE
-		cxx_std_17
+		c_std_17
 )
 
 target_sources(
 	${PROJECT_NAME}
 	PRIVATE
-		src/nes/Bus.cpp
-		src/nes/CPU.cpp
-		src/nes/Cartridge.cpp
-		src/nes/Mapper.cpp
-		src/nes/mapper/NROM.cpp
-
-		src/main.cpp
-
+		src/common/log.c
+		src/common/utils.c
+		src/emu/cpu.c
+		src/main.c
 )
 
-target_precompile_headers(
+target_sources(
 	${PROJECT_NAME}
 	PRIVATE
-		include/common/types.hpp
-		include/common/BitField.hpp
-
-		include/nes/Mapper.hpp
-		include/nes/Cartridge.hpp
-		include/nes/mapper/NROM.hpp
+	FILE_SET HEADERS
+	TYPE HEADERS
+	BASE_DIRS ${CMAKE_SOURCE_DIR}/include
+	FILES
+		include/common/log.h
+		include/common/types.h
+		include/common/utils.h
+		include/emu/cpu.h
 )
 
-target_include_directories(
+target_compile_definitions(
 	${PROJECT_NAME}
 	PRIVATE
-		${PROJECT_SOURCE_DIR}/include
+	$<$<CONFIG:Debug>:_DEBUG>
 )
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-	set_debug_options(${PROJECT_NAME})
-else()
-	target_compile_options(${target} PRIVATE -g0 -O3)
+	# Enable CCACHE.
+	find_program(CCACHE_PROGRAM ccache)
+	if(CCACHE_PROGRAM)
+		message(STATUS "CCache found!")
+
+		set_target_properties(
+			${PROJECT_NAME}
+			PROPERTIES
+				CMAKE_C_COMPILER_LAUNCHER "${CCACHE_PROGRAM}"
+				CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_PROGRAM}"
+		)
+	endif()
+
+	# Use address sanitizer flags.
+	if (ENABLE_ASAN)
+		message(STATUS "Using Address Sanitizer.")
+
+		target_compile_options(
+			${PROJECT_NAME}
+			PRIVATE
+				$<$<COMPILE_LANGUAGE:C,CXX>:
+				-fsanitize=address
+				-fsanitize=leak
+				-fsanitize=undefined
+				-fno-omit-frame-pointer>
+		)
+		target_link_options(
+			${PROJECT_NAME}
+			PRIVATE
+				$<$<COMPILE_LANGUAGE:C,CXX>:
+				-fsanitize=address
+				-fsanitize=leak
+				-fsanitize=undefined
+				-fno-omit-frame-pointer>
+		)
+	endif()
 endif()
 
 set_default_warnings(${PROJECT_NAME})
-link_default_libraries(${PROJECT_NAME})
